# NeRF-This

./: README.md  pyproject.toml
data/fox/camera_paths/: 2023-04-28_184125.json  2023-05-02_222316.json
nerfthis/: nerfthis.py  nerfthis_config.py  nerfthis_datamanager.py  nerfthis_dataparser.py  nerfthis_diffusion.py  nerfthis_pipeline.py  nerfthis_trainer.py
renders/: metrics.csv  stats.py
