[project]
name = "nerfthis"
version = "0.1.0"

dependencies = [
    "nerfstudio",
    "nerfacc",
    "diffusers",
    "transformers",
    "accelerate",
]

[tool.setuptools.packages.find]
include = ["nerfthis*"]

[project.entry-points.'nerfstudio.method_configs']
nerfthis = 'nerfthis.nerfthis_config:nerfthis_method'